--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -775,7 +775,7 @@ You can first check the code is working as expected with the OpenJFX runtime by 
 
 Our application looks a bit sad? Maybe you can try link:https://github.com/webfx-project/webfx-example/blob/main/webfx-example-application/src/main/java/org/example/ExampleApplication.java[this little code^] that adds a bit of colors, animation and effect?
 
-More ideas pop up in your mind? Now is the time to play with WebFX!
+Some more creative ideas pop up in your mind? Now is the time for you to play with WebFX!
 
 ifdef::backend-html5[]
 == PDF version
