--- a/src/main/asciidoc/webfx-docs.adoc
+++ b/src/main/asciidoc/webfx-docs.adoc
@@ -262,7 +262,7 @@ The `webfx.sh` and `webfx.bat` script files (located under the webfx-cli directo
 
 ==== Creating a permanent _webfx_ alias
 
-To easily invoke the CLI from a terminal, we need to create a permanent _webfx_ alias. This is done with the following commands (to run under the webfx-cli directory):
+To easily invoke the CLI from a terminal, we need to create a permanent _webfx_ alias. This is done with the following commands (#to run under the webfx-cli directory#):
 
 [source,shell,indent=0,role="primary"]
 .Linux
@@ -478,7 +478,9 @@ We will now cover each target platform in detail.
 
 === Web platform
 
-You can use the following commands to target the Web platform:
+The link:https://github.com/tbroyer/gwt-maven-plugin[GWT Maven plugin^] will be invoked to generate the web application.
+
+You can use the following commands:
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -514,13 +516,15 @@ TIP: As opposed to `--show`, `--locate` works even before the build, as it print
 
 The `run` command has exactly the same options as the `build` command. The only difference between these 2 commands is that with `run` you can run the app without rebuilding it (unless `--build` is specified), and with `build` you can build the app without running it (unless `--run` is specified).
 
-In the next sections, we won't repeat all the commands, we will use only the last command to build and run the application in one go, but of course you can still choose to separate the build and the run.
+In the next sections, we won't repeat all these commands, we will use only the last command to build and run the application in one go, but of course you can still choose to separate the build and the run.
 
 === Desktop platform (JAR)
 
 NOTE: The desktop JAR executable is usually used for local testing. If you want to distribute your desktop application, the embed JRE or native executables are preferred, as they don't require Java installed on the users machines.
 
-You can use the following command to target the Desktop platform (JAR):
+The link:https://github.com/apache/maven-shade-plugin[Maven Shade plugin^] will be invoked to generate an executable fat jar.
+
+You can use the following command:
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -541,6 +545,8 @@ TIP: You can combine the build options. For example `webfx build --gwt --openjfx
 
 As opposed to the JAR, the embed JRE will be specific to the target platform. Therefore, a Linux machine will build a Linux executable, a Mac a macOS executable, and a Windows machine a Windows executable.
 
+The link:https://github.com/fvarrui/JavaPackager[JavaPackager Maven plugin^] will be invoked to generate the executables and installers for the different platforms.
+
 *Prerequisite*: you must install the following software for a successful build:
 
 [source,shell,indent=0,role="primary"]
@@ -548,14 +554,14 @@ As opposed to the JAR, the embed JRE will be specific to the target platform. Th
 ----
 webfx install ubuntu-tools <1>
 ----
-<1> These tools are used to generate the .deb and .rpm installers.
+<1> These tools are required by JavaPackager.
 
 [source,shell,indent=0,role="secondary"]
 .macOS
 ----
 webfx install xcode <1>
 ----
-<1> Actually just check if Xcode is installed with a correct path, otherwise suggest solutions.
+<1> Just checks that Xcode is installed with the correct path, otherwise suggest solutions.
 
 [source,shell,indent=0,role="secondary"]
 .Windows
@@ -563,14 +569,14 @@ webfx install xcode <1>
 webfx install wix <1>
 webfx install inno <2>
 ----
-<1> Optional. The WiX Toolset is used to create a simple .msi installer.
-<2> Optional. Inno Setup is used to create a more elaborate .exe installer.
+<1> Optional. The WiX Toolset is used by JavaPackager to create a simple .msi installer.
+<2> Optional. Inno Setup is used by JavaPackager to create a more elaborate .exe installer.
 
 NOTE: The CLI will help you to customize the installers (application name, icon, etc...) in a next version. For now, we just use the default settings.
 
 IMPORTANT: On macOS, you need to configure at least a Team ID in Xcode in order to make the application runnable on your machine. We will provide a guide for this later.
 
-Then, you can use the following command to target the Desktop platform (embed JRE):
+Then, you can use the following command:
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -590,6 +596,8 @@ TIP: If the application fails to run on macOS, you can try `webfx run -k --open`
 
 Like for the embed JRE, 3 different machines are required to target the Linux, macOS, and Windows executables.
 
+The link:https://github.com/gluonhq/gluonfx-maven-plugin[GluonFX Maven plugin^] will be invoked to generate the native desktops.
+
 *Prerequisites*: you must install the following software for a successful build:
 
 [source,shell,indent=0,role="primary"]
@@ -598,16 +606,17 @@ Like for the embed JRE, 3 different machines are required to target the Linux, m
 webfx install graalvm <1>
 webfx install ubuntu-tools <1>
 ----
-<1> Required for the Gluon toolchain
+<1> Required for the GluonFX Maven plugin
 
 [source,shell,indent=0,role="secondary"]
 .macOS
 ----
 webfx install graalvm <1>
-webfx install xcode-tools <2>
+webfx install xcode <2>
 ----
-<1> Required for the Gluon toolchain
-<2> Required for code signing
+<1> Required for the GluonFX Maven plugin
+<2> Just checks that Xcode is installed with the correct path, otherwise suggest solutions.
+
 
 [source,shell,indent=0,role="secondary"]
 .Windows
@@ -616,10 +625,10 @@ webfx install graalvm <1>
 webfx install vs-tools <1>
 webfx install wix <2>
 ----
-<1> Required for the Gluon toolchain
-<2> Optional. WiX Toolset is used to create a simple .msi installer.
+<1> Required for the GluonFX Maven plugin
+<2> Optional. The WiX Toolset is called by the GluonFX Maven plugin to create a simple .msi installer.
 
-Then, you can use the below command to target the Desktop platform (native):
+Then, you can use the below command:
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -633,18 +642,20 @@ webfx build --gluon-desktop --run
 webfx build -dr
 ----
 
-WARNING: On some Linux virtual machines that don't support OpenGL, JavaFX may report: Error initializing QuantumRenderer: no suitable pipeline found.
+WARNING: On machines that don't support OpenGL (such as some Linux virtual machines), JavaFX may report: Error initializing QuantumRenderer: no suitable pipeline found. We will provide later an option to include the JavaFX software pipeline as a backup, but this will increase the size of the executable.
 
 === Android platform
 
 A Linux machine is required to build the Android executable.
+
+The link:https://github.com/gluonhq/gluonfx-maven-plugin[GluonFX Maven plugin^] will be invoked to generate the native Android application.
 
 *Prerequisites*: you must install the following software for a successful build:
 
  webfx install graalvm
  webfx install ubuntu-tools
 
-Then, you can use the following commands to target the Android platform (native):
+Then, you can use the following command:
 
 [source,shell,indent=0,role="primary"]
 .Long syntax
@@ -668,9 +679,12 @@ NOTE: Only 64-bit architecture is supported (the installation will fail on 32-bi
 
 A Mac is required to build the iOS executable.
 
+The link:https://github.com/gluonhq/gluonfx-maven-plugin[GluonFX Maven plugin^] will be invoked to generate the native iOS application.
+
 *Prerequisite*: you must install the following software for a successful build:
 
  webfx install graalvm
+ webfx install xcode
 
 Then, you can use the following commands to target the iOS platform (native):
 
