--- a/src/main/asciidoc/webfx-project/webfx-project.adoc
+++ b/src/main/asciidoc/webfx-project/webfx-project.adoc
@@ -10,6 +10,7 @@ skinparam rectangleShadowing false
 skinparam nodeBackgroundColor f5dd90
 skinparam nodeBackgroundColor<<CLIStyle>> e0aaff
 skinparam nodeBackgroundColor<<KitStyle>> ff5050
+skinparam linetype polyline
 
 rectangle Y as "Your WebFX Applications" {
     node "Enterprise Application" as EA
@@ -31,8 +32,11 @@ kit -d-> plat
 extras -d-> kit
 stack -d-> kit
 stack -r-> extras
-cli -[hidden]r->kit
-libs -[hidden]l-> kit
+cli -[hidden]l->kit
+libs -[hidden]r-> kit
+
+GA -[dotted,norank]> kit
+GA -[dotted]> libs
 
 EA -[dotted]> stack
 EA -[dotted]> extras
