--- a/src/main/asciidoc/webfx-stack/webfx-stack.adoc
+++ b/src/main/asciidoc/webfx-stack/webfx-stack.adoc
@@ -89,9 +89,10 @@ digraph D {
     ORM -> QueryPush
     QueryPush -> Push
     QueryPush -> DB
+    WebWorker -> Push [style=invis, constraint=false]
 
-    WebWorker -> Com [ltail=cluster_C,style=dashed,minlen=2,constraint=true]
-    Com -> QueryPushS [lhead=cluster_S,style=dashed,minlen=2,constraint=true]
+    WebWorker -> Com [ltail=cluster_C,style=dashed,minlen=2]
+    Com -> QueryPushS [lhead=cluster_S,style=dashed,minlen=2]
 
     QueryPushS -> PushS
     QueryPushS -> DBS
